--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                     <td>jane@example.com</td>
                 </tr>
                 <tr>
-                    <td>Mike Johnson</td>
+                    <td>Mike John tyson</td>
                     <td>CTO</td>
                     <td>mike@example.com</td>
                 </tr>
