--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ArtiFusion is a creative company that specializes in AI-generated art, using cutting-edge technology to produce stunning and unique pieces.">
     <meta name="keywords" content="ArtiFusion, AI art, machine learning, creative company, unique art, technology">
-    <meta name="author" content="Jacob Larsen and ">
+    <meta name="author" content="Chris Larsen and ">
     <meta property="og:title" content="ArtiFusion - Creative AI-generated Art">
     <meta property="og:description" content="ArtiFusion is a creative company that specializes in AI-generated art, using cutting-edge technology to produce stunning and unique pieces.">
     <meta property="og:image" content="http://www.example.com/images/artifusion_logo.jpg">
@@ -55,7 +55,7 @@
         </div>
     </nav>
 </header>
-<!-- end  Jacob -->
+<!-- end  Chris -->
 <main>
     <!-- start Leandro -->
     <div class="d-flex justify-content-center border-bottom-black bg-danger">
