--- a/explore.html
+++ b/explore.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ArtiFusion is a creative company that specializes in AI-generated art, using cutting-edge technology to produce stunning and unique pieces.">
     <meta name="keywords" content="ArtiFusion, AI art, machine learning, creative company, unique art, technology">
-    <meta name="author" content="Jacob Larsen and ">
+    <meta name="author" content="Chris Larsen and ">
     <meta property="og:title" content="ArtiFusion - Creative AI-generated Art">
     <meta property="og:description" content="ArtiFusion is a creative company that specializes in AI-generated art, using cutting-edge technology to produce stunning and unique pieces.">
     <meta property="og:image" content="http://www.example.com/images/artifusion_logo.jpg">
@@ -27,7 +27,7 @@
 
     <script>
         // Global variables. page is dynamic, the others are static
-        // Created by Jacob
+        // Created by Chris
         let page = 0;
         let pages = 3;
         let images_per_page = 3;
