--- a/about.html
+++ b/about.html
@@ -1,15 +1,16 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ArtiFusion is a creative company that specializes in AI-generated art, using cutting-edge technology to produce stunning and unique pieces.">
+    <meta name="description"
+        content="ArtiFusion is a creative company that specializes in AI-generated art, using cutting-edge technology to produce stunning and unique pieces.">
     <meta name="keywords" content="ArtiFusion, AI art, machine learning, creative company, unique art, technology">
     <meta name="author" content="Chris Larsen and ">
     <meta property="og:title" content="ArtiFusion - Creative AI-generated Art">
-    <meta property="og:description" content="ArtiFusion is a creative company that specializes in AI-generated art, using cutting-edge technology to produce stunning and unique pieces.">
+    <meta property="og:description"
+        content="ArtiFusion is a creative company that specializes in AI-generated art, using cutting-edge technology to produce stunning and unique pieces.">
     <meta property="og:image" content="http://www.example.com/images/artifusion_logo.jpg">
     <meta property="og:type" content="website">
     <title>ArtiFusion - Creative AI-generated Art</title>
@@ -26,162 +27,176 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="static/css/base.css">
 
-    <link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="assets/icon.png" />
 </head>
+
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#">ArtiFusiongjv</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="explore.html">Explore</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">ArtiFusiongjv</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="explore.html">Explore</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="testimonies.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
 
-<!-- end  Sam -->
-<main>
-    <!-- start Leandro -->
-    <div class="d-flex justify-content-center border-bottom-black bg-danger">
-        <div class="col-12 col-md-12 col-lg-10 col-xl-8 d-flex align-items-center">
-            <div class="col-7">
+    <!-- end  Sam -->
+    <main>
+        <!-- start Leandro -->
+        <div class="d-flex justify-content-center border-bottom-black bg-danger">
+            <div class="col-12 col-md-12 col-lg-10 col-xl-8 d-flex align-items-center">
+                <div class="col-7">
 
-                <div class="jumbotron jumbotron-fluid bg-danger text-white">
-                    <div class="col-10">
-                        
-                        <h1 class="display-4">Our Beginnings</h1>
-                        <p class="lead">
-                            ArtiFusion is a creative company that is at the forefront of the intersection between art and technology. They specialize in producing stunning and unique pieces of art through the use of cutting-edge artificial intelligence technology.
-                        </p>
-                        
+                    <div class="jumbotron jumbotron-fluid bg-danger text-white">
+                        <div class="col-10">
+
+                            <h1 class="display-4">Our Beginnings</h1>
+                            <p class="lead">
+                                ArtiFusion is a creative company that is at the forefront of the intersection between
+                                art and technology. They specialize in producing stunning and unique pieces of art
+                                through the use of cutting-edge artificial intelligence technology.
+                            </p>
+
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <img src="assets/ai_art5.png" alt="Slide 1">
-
-            </div>
-        </div>
-
-    </div>
-    <section>
-        <div class="container about-section mt-5 main-header">
-            <h2>Our Story</h2>
-            <p></p>
-            <p>Whether you are a seasoned art collector or simply looking to add a unique piece to your home or office, ArtiFusion has something to offer. Their pieces are not only visually stunning but also deeply meaningful, often exploring themes related to the intersection between technology and humanity. By purchasing an AI-generated art piece from ArtiFusion, you are not only getting a beautiful work of art but also a piece of the future of art. With their dedication to pushing the limits of what is possible, ArtiFusion is sure to continue producing groundbreaking and awe-inspiring pieces for years to come.</p>
-            <h2>Our Team</h2>
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Title</th>
-                    <th>Email</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>John Smith</td>
-                    <td>CEO</td>
-                    <td>john@example.com</td>
-                </tr>
-                <tr>
-                    <td>Jane Doe</td>
-                    <td>COO</td>
-                    <td>jane@example.com</td>
-                </tr>
-                <tr>
-                    <td>Mike John tyson</td>
-                    <td>CTO</td>
-                    <td>mike@example.com</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </section>
-    <div class="d-flex justify-content-center border-bottom-black bg-dark">
-        <div class="col-12 col-md-12 col-lg-10 col-xl-8 d-flex align-items-center">
-            <div class="row mb-4 mt-5">
-
-                <div
-                    class="col d-flex justify-content-lg-start justify-content-xl-start justify-content-center justify-content-md-center justify-content-sm-center">
-
-
-
-
-                    <span class="mx-4">
-                        <a href="https://github.com/Komodo2013/cs220_web2">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white"
-                                class="bi bi-github" viewBox="0 0 16 16">
-                                <path
-                                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-                            </svg>
-                        </a>
-
-                    </span>
-
-                    <span class="mx-4">
-                        <a href="mailto: emailboat49@gmail.com ">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white"
-                                class="bi bi-envelope-plus-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 4.697v4.974A4.491 4.491 0 0 0 12.5 8a4.49 4.49 0 0 0-1.965.45l-.338-.207L16 4.697Z" />
-                                <path
-                                    d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-3.5-2a.5.5 0 0 0-.5.5v1h-1a.5.5 0 0 0 0 1h1v1a.5.5 0 0 0 1 0v-1h1a.5.5 0 0 0 0-1h-1v-1a.5.5 0 0 0-.5-.5Z" />
-                            </svg>
-                        </a>
-                    </span>
+                <div class="col">
+                    <img src="assets/ai_art5.png" alt="Slide 1">
 
                 </div>
-
             </div>
-            <hr class="bg-white">
-
-            <div class="row mt-4">
-
-                <div class="col d-flex justify-content-end text-white">
-                    <span class="mx-5">
-                        About
-                    </span>
-
-                    <span class="mx-5">
-                        <a href="mailto: emailbot49@gmail.com" class="link-secondary text-white"> Contact
-                        </a>
-                    </span>
-                    <span class="mx-5 text-white">
-
-                        Projects
-                    </span>
-                </div>
-            </div>
-
 
         </div>
-    </div>
-    <!-- end Leandro Cooper-->
-</main>
+        <section>
+            <div class="container about-section mt-5 main-header">
+                <h2>Our Story</h2>
+                <p></p>
+                <p>Whether you are a seasoned art collector or simply looking to add a unique piece to your home or
+                    office, ArtiFusion has something to offer. Their pieces are not only visually stunning but also
+                    deeply meaningful, often exploring themes related to the intersection between technology and
+                    humanity. By purchasing an AI-generated art piece from ArtiFusion, you are not only getting a
+                    beautiful work of art but also a piece of the future of art. With their dedication to pushing the
+                    limits of what is possible, ArtiFusion is sure to continue producing groundbreaking and
+                    awe-inspiring pieces for years to come.</p>
+                <h2>Our Team</h2>
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Title</th>
+                            <th>Email</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John Smith</td>
+                            <td>CEO</td>
+                            <td>john@example.com</td>
+                        </tr>
+                        <tr>
+                            <td>Jane Doe</td>
+                            <td>COO</td>
+                            <td>jane@example.com</td>
+                        </tr>
+                        <tr>
+                            <td>Mike John tyson</td>
+                            <td>CTO</td>
+                            <td>mike@example.com</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <div class="d-flex justify-content-center border-bottom-black bg-dark">
+            <div class="col-12 col-md-12 col-lg-10 col-xl-8 d-flex align-items-center">
+                <div class="row mb-4 mt-5">
+
+                    <div
+                        class="col d-flex justify-content-lg-start justify-content-xl-start justify-content-center justify-content-md-center justify-content-sm-center">
 
 
-<script>
-  var currentYear = new Date().getFullYear();
-  document.getElementById("currentYear").textContent = currentYear;
-</script>
+
+
+                        <span class="mx-4">
+                            <a href="https://github.com/Komodo2013/cs220_web2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white"
+                                    class="bi bi-github" viewBox="0 0 16 16">
+                                    <path
+                                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                                </svg>
+                            </a>
+
+                        </span>
+
+                        <span class="mx-4">
+                            <a href="mailto: emailboat49@gmail.com ">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white"
+                                    class="bi bi-envelope-plus-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 4.697v4.974A4.491 4.491 0 0 0 12.5 8a4.49 4.49 0 0 0-1.965.45l-.338-.207L16 4.697Z" />
+                                    <path
+                                        d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-3.5-2a.5.5 0 0 0-.5.5v1h-1a.5.5 0 0 0 0 1h1v1a.5.5 0 0 0 1 0v-1h1a.5.5 0 0 0 0-1h-1v-1a.5.5 0 0 0-.5-.5Z" />
+                                </svg>
+                            </a>
+                        </span>
+
+                    </div>
+
+                </div>
+                <hr class="bg-white">
+
+                <div class="row mt-4">
+
+                    <div class="col d-flex justify-content-end text-white">
+                        <span class="mx-5">
+                            About
+                        </span>
+
+                        <span class="mx-5">
+                            <a href="mailto: emailbot49@gmail.com" class="link-secondary text-white"> Contact
+                            </a>
+                        </span>
+                        <span class="mx-5 text-white">
+
+                            Projects
+                        </span>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+        <!-- end Leandro Cooper-->
+    </main>
+
+
+    <script>
+        var currentYear = new Date().getFullYear();
+        document.getElementById("currentYear").textContent = currentYear;
+    </script>
 
 </body>
+
 </html>
