--- a/explore.html
+++ b/explore.html
@@ -110,7 +110,7 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="testimonies.html">Contact</a>
+                            <a class="nav-link" href="testimonies.html">Testimonies</a>
                     </li>
                 </ul>
             </div>
