--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="testimonies.html">Contact</a>
+                                <a class="nav-link" href="testimonies.html">Testimonies</a>
                         </li>
                     </ul>
                 </div>
