--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <head>
+        <title>Artifusion</title>
+        <script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ArtiFusion is a creative company that specializes in AI-generated art, using cutting-edge technology to produce stunning and unique pieces.">
@@ -27,7 +30,11 @@
     <link rel="stylesheet" href="static/css/base.css">
 
     <link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
+    <!---start christian-->
+    
+    <button onclick="this.innerHTML = name()">content</button>
 </head>
+<!---end Christian-->
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -185,3 +192,8 @@
 
 </body>
 </html>
+<--start Christian---->
+    <footer>
+  <p>&copy; 2023 ArtiFusion. Designed by Leandro, Sam, and Christian.</p>
+</footer>
+<---end Christian----->
