--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@
 
 </body>
 
-
-
 </html>
+
+
+<footer>
+    <p>&copy; 2023 ArtiFusion. Designed by Leandro, Sam, and Christian.</p>
+  </footer>
